replaced chain.fetch_outputs(), fetch_history(chain), fetch_output_values(chain) with chain.fetch_history()
majority of use cases require either querying the history, received balance or current balance. this adds significant performance increases to all those queries while allowing the old behaviour of fetching the output points for an address.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,6 +3,12 @@ LIBS=$(shell pkg-config --libs libbitcoin)
 
 default: all
 
+balance.o: balance.cpp
+	$(CXX) -o $@ -c $< $(CXXFLAGS)
+
+balance: balance.o
+	$(CXX) -o $@ $< $(LIBS)
+
 txrad.o: txrad.cpp
 	$(CXX) -o $@ -c $< $(CXXFLAGS)
 
@@ -63,5 +69,5 @@ proto.o: proto.cpp
 proto: proto.o
 	$(CXX) -o $@ $< $(LIBS)
 
-all: priv determ initchain fullnode display-last satoshiwords connect accept proto txrad
+all: balance priv determ initchain fullnode display-last satoshiwords connect accept proto txrad
 
