--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -5,6 +5,7 @@ includedir=@includedir@
 
 Name: libbitcoin
 Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack everything at every level, and very configurable.
+URL: http://libbitcoin.dyne.org
 Version: @PACKAGE_VERSION@
 Requires: libcurl
 Cflags: -I${includedir} -std=c++11 @CFLAG_LEVELDB@
