--- a/examples/Makefile
+++ b/examples/Makefile
@@ -71,3 +71,6 @@ proto: proto.o
 
 all: balance priv determ initchain fullnode display-last satoshiwords connect accept proto txrad
 
+clean:
+	rm -f accept connect determ display-last fullnode initchain priv proto satoshiwords txrad
+	rm -f *.o
