--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,8 @@ AC_GNU_SOURCE
 AX_CXX_COMPILE_STDCXX_11(noext,mandatory)
 #CXXFLAGS="-Wall -Wno-unused-parameter -pedantic -pthread -Wextra -fstack-protector-all"
 
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+
 AC_ARG_ENABLE(leveldb,
 	[AC_HELP_STRING([--enable-leveldb],
 			[Build LevelDB support.])],
