install some doc with libbitcoin.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,36 @@
+doc_DATA = README INSTALL COPYING doc/README.tutorial
+
+#doc_sphinxdir = $(docdir)/sphinx/
+#doc_sphinx_DATA = \
+#    doc/sphinx/Makefile \
+#    doc/sphinx/overview.rst \
+#    doc/sphinx/network.rst \
+#    doc/sphinx/make.bat \
+#    doc/sphinx/crypto.rst \
+#    doc/sphinx/fullnode.rst \
+#    doc/sphinx/offlinetx.rst \
+#    doc/sphinx/blockchain.rst \
+#    doc/sphinx/index.rst \
+#    doc/sphinx/quickstart.rst \
+#    doc/sphinx/conf.py \
+#    doc/sphinx/introduction.rst
+#
+#doc_sphinx_imgdir = $(docdir)/sphinx/img/
+#doc_sphinx_img_DATA = doc/sphinx/img/operations.png
+#
+#doc_sphinx_examplesdir = $(docdir)/sphinx/examples/
+#doc_sphinx_examples_DATA = \
+#    doc/sphinx/examples/connect.rst \
+#    doc/sphinx/examples/initchain.rst \
+#    doc/sphinx/examples/priv.rst \
+#    doc/sphinx/examples/determ.rst \
+#    doc/sphinx/examples/accept.rst \
+#    doc/sphinx/examples/txrad.rst \
+#    doc/sphinx/examples/satoshiwords.rst \
+#    doc/sphinx/examples/fullnode.rst \
+#    doc/sphinx/examples/display-last.rst \
+#    doc/sphinx/examples/proto.rst
+
 pkgconfig_DATA = libbitcoin.pc
 
 SUBDIRS = include/bitcoin src
