--- a/Makefile.am
+++ b/Makefile.am
@@ -31,6 +31,7 @@ doc_DATA = README INSTALL COPYING doc/README.tutorial
 #    doc/sphinx/examples/display-last.rst \
 #    doc/sphinx/examples/proto.rst
 
+bin_DATA = bin/download-blockchain.sh
 pkgconfig_DATA = libbitcoin.pc
 
 SUBDIRS = include/bitcoin src
