[debian] Removed --enable-bdb build flag
Support for bdb was removed at 0e43299b97ce75b9a8db4f65cc1ac488fc1b7637

--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ else
   confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
 endif
 
-confflags += --enable-bdb --enable-leveldb
+confflags += --enable-leveldb
 confflags += --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
 
 configure: configure-stamp
