--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: libbitcoin
 Section: libs
 Priority: optional
 Maintainer: Pablo Castellano <pablo@anche.no>
-Build-Depends: debhelper, pkg-config, build-essential, autoconf, libtool, libboost-all-dev, libdb++-dev, libcurl4-openssl-dev, libleveldb-dev
-Standards-Version: 3.9.3
+Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, libtool, libboost-all-dev, libdb++-dev, libcurl4-openssl-dev, libleveldb-dev
+Standards-Version: 3.9.4
 Vcs-Git: https://github.com/spesmilo/libbitcoin.git
 Vcs-Browser: https://github.com/spesmilo/libbitcoin
 Homepage: http://libbitcoin.dyne.org/
@@ -23,15 +23,13 @@ Description: development files for libbitcoin
  Another core design principle is libbitcoin is not a framework, but a
  toolkit. Frameworks hinder development during the latter stages of a
  development cycle, enforce one style of coding and do not work well with
- other frameworks. By contrast, we have gone to great pains to make
- libbitcoin function as an independent set of mutual components with no
- dependencies between them.
+ other frameworks. By contrast, libbitcoin functions as an independent set
+ of mutual components with no dependencies between them.
  .
  This package provides the development files (ie. includes, static library),
  that allow to build software which uses libbitcoin.
 
 Package: libbitcoin
-Section: libs
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -47,8 +45,7 @@ Description: bitcoin library
  Another core design principle is libbitcoin is not a framework, but a
  toolkit. Frameworks hinder development during the latter stages of a
  development cycle, enforce one style of coding and do not work well with
- other frameworks. By contrast, we have gone to great pains to make
- libbitcoin function as an independent set of mutual components with no
- dependencies between them.
+ other frameworks. By contrast, libbitcoin functions as an independent set
+ of mutual components with no dependencies between them.
  .
  This package contains the shared library for libbitcoin.
