--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libbitcoin0
 Section: libs
 Priority: optional
 Maintainer: Pablo Castellano <pablo@anche.no>
-Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, autotools-dev, libtool, libboost-all-dev, libdb++-dev, libcurl4-openssl-dev, libleveldb-dev
+Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, automake, autotools-dev, libtool, libboost-all-dev, libdb++-dev, libcurl4-openssl-dev, libleveldb-dev
 Standards-Version: 3.9.4
 Vcs-Git: https://github.com/spesmilo/libbitcoin.git
 Vcs-Browser: https://github.com/spesmilo/libbitcoin
@@ -12,7 +12,7 @@ Package: libbitcoin-dev
 Section: libdevel
 Architecture: any
 Depends: libbitcoin0 (= ${binary:Version}), ${misc:Depends}
-Description: development files for libbitcoin
+Description: Asynchronous C++ Bitcoin library - development files
  libbitcoin is a bitcoin library targeted towards high end use. The library
  places a heavy focus around asychronicity. This enables a big scope for
  future scalability as each component has its own thread pool.
@@ -34,7 +34,7 @@ Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Multi-Arch: same
-Description: bitcoin library
+Description: Asynchronous C++ Bitcoin library
  libbitcoin is a bitcoin library targeted towards high end use. The library
  places a heavy focus around asychronicity. This enables a big scope for
  future scalability as each component has its own thread pool.
