Support bootstrapping of testnet and faster bootstrapping using bootstrap-fast, which does not check the transactions inside blocks. If they can be deserialized they are considered valid and added to the chain.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -9,4 +9,10 @@ bootstrap.o: bootstrap.cpp
 bootstrap: bootstrap.o
 	$(CXX) -o $@ $< $(LIBS)
 
-all: bootstrap
+bootstrap-fast.o: bootstrap-fast.cpp
+	$(CXX) -o $@ -c $< $(CXXFLAGS)
+
+bootstrap-fast: bootstrap-fast.o
+	$(CXX) -o $@ $< $(LIBS)
+
+all: bootstrap bootstrap-fast  
