Added detect-network to tools, to detect which network the libbitcoin.so is compiled for.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -15,4 +15,14 @@ bootstrap-fast.o: bootstrap-fast.cpp
 bootstrap-fast: bootstrap-fast.o
 	$(CXX) -o $@ $< $(LIBS)
 
-all: bootstrap bootstrap-fast  
+detect-network.o: detect-network.cpp
+	$(CXX) -o $@ -c $< $(CXXFLAGS)
+
+detect-network: detect-network.o
+	$(CXX) -o $@ $< $(LIBS)
+
+all: bootstrap bootstrap-fast detect-network 
+
+clean:
+	rm -f bootstrap bootstrap-fast detect-network
+	rm -f *.o
