add timed_section to installation. it's useful.

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -58,5 +58,6 @@ bitcoin_util_include_HEADERS = \
 	utility/logger.hpp \
 	utility/weak_bind.hpp \
 	utility/key_formats.hpp \
-	utility/mnemonic.hpp
+	utility/mnemonic.hpp \
+    utility/timed_section.hpp
 
