add mmap file utility class.

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -53,6 +53,7 @@ bitcoin_util_include_HEADERS = \
 	utility/serializer.hpp \
 	utility/assert.hpp \
 	utility/big_number.hpp \
+	utility/mmfile.hpp \
 	utility/base58.hpp \
 	utility/ripemd.hpp \
 	utility/subscriber.hpp \
