--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -31,6 +31,10 @@ bitcoin_blockchain_include_HEADERS = \
 	blockchain/blockchain.hpp \
 	blockchain/organizer.hpp
 
+bitcoin_blockchain_database_includedir = $(includedir)/bitcoin/blockchain/database
+bitcoin_blockchain_database_include_HEADERS = \
+	blockchain/database/stealth_database.hpp
+
 if DO_LEVELDB
 bitcoin_blockchain_include_HEADERS += \
 	blockchain/leveldb_blockchain.hpp
