Update filters and proj files, remove _WINDOWS symbol.

--- a/builds/msvc/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/libbitcoin/libbitcoin.vcxproj.filters
@@ -149,15 +149,9 @@
     <ClCompile Include="..\..\..\src\blockchain\leveldb\leveldb_common.cpp">
       <Filter>src\blockchain\levldb</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\leveldb-single-file.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\snappy-single-file.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\crc32c.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\snappy-single-file.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\leveldb-single-file.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\crc32c.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\src\blockchain\leveldb\leveldb_organizer.hpp">
