--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -289,6 +289,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\blockchain\leveldb_blockchain.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\blockchain\organizer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\constants.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\define.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\error.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\format.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\getx_responder.hpp" />
